@startuml FASE_02_POO
!theme plain
skinparam backgroundColor #F8F9FA
skinparam classFontSize 12
skinparam classAttributeFontSize 11
skinparam stereotypeCBackgroundColor #E3F2FD
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #4CAF50

title 🚀 FASE 2: POO - ARQUITECTURA ORIENTADA A OBJETOS\nLo que VAS a construir (Evolución de Fase 1)

package "com.forestech" <<Rectangle>> #E8F5E9 {

    class Main <<Orquestador>> {
        {static} +main(String[] args) : void
        --
        **FLUJO EVOLUCIONA A:**
        1. Mostrar banner
        2. Mostrar menú
        3. Capturar opción
        4. Si opción 1 o 2:
           - **Crear objeto Movement**
           - Capturar datos del usuario
           - **Movement calcula automáticamente**
           - **Movement se valida a sí mismo**
           - **Movement se muestra a sí mismo**
        5. **Guardar Movement en ArrayList**
    }

    class BannerMenu <<Utilidad>> {
        {static} +header() : void
        --
        **Sin cambios**
        (sigue igual que Fase 1)
    }

    class MenuHelper <<Lógica de Menú>> {
        {static} +displayMenu() : void
        {static} +processMenuOption(int) : void
        {static} +validateMovementType(String) : void
        --
        **Cambios menores:**
        - Ahora trabaja con objetos Movement
        - Agrega opción "Listar movimientos"
    }

    class InputHelper <<Captura de Datos>> {
        {static} -scanner : Scanner
        --
        {static} +readInt(String) : int
        {static} +readDouble(String) : double
        {static} +readString(String) : String
        {static} +readFuelType() : String
        --
        **Sin cambios significativos**
    }

    class DataDisplay <<Visualización>> {
        {static} +showFuelTypes() : void
        {static} +showMenuWithForEach(String[]) : void
        {static} +simulateProcessing(int) : void
        {static} +showMovementsList(ArrayList<Movement>) : void
        --
        **NUEVO:**
        + Método para mostrar lista de movimientos
    }

    class AppConfig <<Configuración>> {
        {static} +APP_NAME : String
        {static} +VERSION : String
        {static} +DB_CONNECTION : String
        {static} +IVA : double = 0.19
        --
        **Cambio:**
        IVA se mueve aquí desde
        MovementCalculator
    }

    class Movement <<⭐ CLASE PRINCIPAL - AHORA ACTIVA>> {
        ' Atributos (estado del objeto)
        -id : String
        -type : String
        -fuelType : String
        -quantity : double
        -pricePerUnit : double
        -subtotal : double
        -iva : double
        -total : double
        -timestamp : LocalDateTime
        --
        ' Constructores
        +Movement()
        +Movement(type, fuelType, quantity, pricePerUnit)
        --
        ' Getters
        +getId() : String
        +getType() : String
        +getFuelType() : String
        +getQuantity() : double
        +getPricePerUnit() : double
        +getSubtotal() : double
        +getIva() : double
        +getTotal() : double
        +getTimestamp() : LocalDateTime
        --
        ' Setters
        +setType(String) : void
        +setFuelType(String) : void
        +setQuantity(double) : void
        +setPricePerUnit(double) : void
        --
        ' Métodos de negocio (antes en MovementCalculator)
        +calculateSubtotal() : void
        +calculateIVA() : void
        +calculateTotal() : void
        +isValidMovement() : boolean
        +isBigPurchase() : boolean
        +requiresApproval() : boolean
        --
        ' Métodos de utilidad
        +toString() : String
        +printSummary() : void
        +generateId() : String
        --
        **RESPONSABILIDAD:**
        Encapsular TODOS los datos
        y comportamientos de un
        movimiento de combustible
    }

    class MovementCalculator <<⚠️ DEPRECADA - SE ELIMINARÁ>> {
        {static} +calculateSubtotal(double, double) : double
        {static} +calculateIVA(double) : double
        {static} +calculateTotal(double, double) : double
        --
        **Estado:**
        Esta clase ya NO se usa.
        Sus métodos se movieron
        a la clase Movement.
        --
        🗑️ **Se eliminará en Fase 3**
    }
}

' Relaciones (NUEVAS - Orientadas a Objetos)
Main ..> BannerMenu : << usa >>
Main ..> MenuHelper : << usa >>
Main ..> InputHelper : << usa >>
Main --> Movement : << crea y gestiona >>
Main --> "0..*" Movement : almacena en ArrayList

MenuHelper ..> Movement : << procesa >>
DataDisplay ..> Movement : << muestra >>

Movement ..> AppConfig : << usa constantes >>

note right of Movement
  **⭐ ESTRELLA DE LA FASE 2**

  ✅ **Evolución de Fase 1:**
  - Antes: variables sueltas
  - Ahora: objeto con estado

  ✅ **Principios POO aplicados:**
  - **Encapsulamiento:** atributos privados
  - **Abstracción:** interfaz pública clara
  - **Cohesión:** todo relacionado con
    Movement está en una clase

  🎯 **Ventajas:**
  - Datos y comportamiento juntos
  - Fácil crear múltiples movimientos
  - Cada objeto se valida a sí mismo
  - Código más mantenible
end note

note left of Main
  **CAMBIO PRINCIPAL EN MAIN:**

  **Antes (Fase 1):**
  ```java
  double cantidad = InputHelper.readDouble();
  double precio = InputHelper.readDouble();
  double total = MovementCalculator.calculate(...);
  System.out.println("Total: " + total);
  ```

  **Ahora (Fase 2):**
  ```java
  Movement mov = new Movement();
  mov.setQuantity(InputHelper.readDouble());
  mov.setPricePerUnit(InputHelper.readDouble());
  mov.calculateTotal();
  mov.printSummary();

  // ¡Guardar para usar después!
  movements.add(mov);
  ```
end note

note bottom of MovementCalculator
  **⚠️ MIGRACIÓN:**

  Los métodos estáticos de esta clase
  se convierten en métodos de instancia
  en Movement.

  **Ejemplo:**
  MovementCalculator.calculateTotal(qty, price)
  ⬇️
  movement.calculateTotal()
end note

legend right
  |<#E3F2FD>| << Orquestador >> | Controla el flujo principal |
  |<#C8E6C9>| << Clase Principal >> | Corazón del sistema (POO) |
  |<#E8F5E9>| << Utilidad >> | Funciones auxiliares |
  |<#FFCCBC>| << Deprecada >> | Se eliminará próximamente |

  **Conceptos POO que aprenderás:**
  🆕 Atributos de instancia (private)
  🆕 Constructores (con parámetros)
  🆕 Getters y Setters (encapsulamiento)
  🆕 Métodos de instancia (no static)
  🆕 this (referencia al objeto actual)
  🆕 toString() override
  🆕 LocalDateTime (API moderna)
  🆕 ArrayList<Movement> (colecciones tipadas)
  🆕 Generación de IDs únicos

  **Reutilizas de Fase 1:**
  ✅ Validaciones
  ✅ Cálculos matemáticos
  ✅ Lógica de negocio
end legend

@enduml

